--- a/UltrasonicTesting/UltrasonicTesting.csproj
+++ b/UltrasonicTesting/UltrasonicTesting.csproj
@@ -43,17 +43,16 @@
   <ItemGroup>
     <Compile Include="AcousticAttenuation\AcousticAttenuation.cs" />
     <Compile Include="AcousticAttenuation\FraunhoferZone\AttenuationFraunhoferPlane.cs" />
+    <Compile Include="AcousticAttenuation\FresnelZone\AttenuationFresnelPlane.cs" />
     <Compile Include="AcousticAttenuation\IAcousticAttenuation.cs" />
-    <Compile Include="AcousticWave.cs" />
-    <Compile Include="Material.cs" />
+    <Compile Include="Models\AcousticWave.cs" />
+    <Compile Include="Models\Material.cs" />
     <Compile Include="PiezoelectricityConverter\PiezoelectricityConverter.cs" />
     <Compile Include="PiezoelectricityConverter\RoundPEC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestObject.cs" />
+    <Compile Include="Models\TestObject.cs" />
     <Compile Include="UltrasonicThicknessGauge.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="AcousticAttenuation\FresnelZone\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
