--- a/UltrasonicTestingForms/UltrasonicTestingForms.csproj
+++ b/UltrasonicTestingForms/UltrasonicTestingForms.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>IconProject.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -152,6 +155,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\waveTop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="IconProject.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
