--- a/UltrasonicTestingForms/UltrasonicTestingForms.csproj
+++ b/UltrasonicTestingForms/UltrasonicTestingForms.csproj
@@ -52,10 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\AppConfigController.cs" />
-    <Compile Include="Controllers\MSWordController.cs" />
+    <Compile Include="Controllers\ScreenshotController.cs" />
     <Compile Include="Controllers\WaweController.cs" />
-    <Compile Include="Controllers\XMLMaterialsController.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
