--- a/UltrasonicTesting_Tests/UltrasonicTesting_Tests.csproj
+++ b/UltrasonicTesting_Tests/UltrasonicTesting_Tests.csproj
@@ -49,14 +49,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MaterialTest.cs" />
+    <Compile Include="TestsLibrary\Models\MaterialTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AcousticWaveTest.cs" />
-    <Compile Include="RoundPECTest.cs" />
-    <Compile Include="AttenuationFraunhoferPlaneTest.cs" />
-    <Compile Include="UltrasonicThicknessGaugeTest.cs" />
-    <Compile Include="TestObjectTest.cs" />
-    <Compile Include="AttenuationFresnelPlaneTest.cs" />
+    <Compile Include="TestsLibrary\Models\AcousticWaveTest.cs" />
+    <Compile Include="TestsLibrary\Models\RoundPECTest.cs" />
+    <Compile Include="TestsLibrary\Models\AttenuationFraunhoferPlaneTest.cs" />
+    <Compile Include="TestsLibrary\UltrasonicThicknessGaugeTest.cs" />
+    <Compile Include="TestsLibrary\Models\TestObjectTest.cs" />
+    <Compile Include="TestsLibrary\Models\AttenuationFresnelPlaneTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -66,6 +66,9 @@
       <Project>{e179a978-4cbb-470b-8bba-06a42d0607a5}</Project>
       <Name>UltrasonicTesting</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TestsLibrary\Controllers\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
